[metadata]
name = ROMtools
version = 0.2.5
description = Tools for reduced order modelling of dynamical systems
author = Turner Jennings
author_email = turner.jennings@outlook.com
url = https://github.com/turnerjennings/ROMtools
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Topic :: Scientific/Engineering

[options]
packages = find:
package_dir =
    = src
install_requires =
    numpy
    matplotlib

[options.packages.find]
where = src